- copy updates. - fixed "My Project" cards functionality on mobile. - fixing up styles on tablet.

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -87,6 +87,14 @@ img {
   }
 }
 
+.hide-mobile {
+  display: none;
+
+  @include mq-up(large) {
+    display: inline;
+  }
+}
+
 .hide-desktop {
   @include mq-up(large) {
     display: none;
