--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -8,10 +8,6 @@
   top: 0;
   z-index: 1;
 
-  @include mq-up(medium) {
-    padding: 2rem 0;
-  }
-
   a {
     color: $c-white;
   }
@@ -81,7 +77,7 @@
     padding: 0 2rem;
     position: absolute;
     right: 0;
-    top: 3.4rem;
+    top: calc(100% + 1.5rem);
     transition: max-height 0.3s;
 
     .show-nav & {
@@ -105,6 +101,7 @@
 
         a {
           display: block;
+          font-size: 1.2rem;
           padding: 1rem 0;
 
           @include mq-up(medium) {
