--- a/src/styles/settings/_variables.scss
+++ b/src/styles/settings/_variables.scss
@@ -5,7 +5,7 @@ $site-width: 1440px;
 $bp-small: 576px;
 $bp-medium: 768px;
 $bp-large: 1024px;
-$bp-x-large: 1300px;
+$bp-extra-large: 1300px;
 
 // Colors
 $c-white: #fff;
